<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.asi_soft.able.demo.CreditsActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/version_label"
                android:id="@+id/textViewVersionLabel"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:textColor="@android:color/white"
                android:layout_marginBottom="10sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="1111.0.2908324"
                android:id="@+id/textViewVersion"
                android:textColor="@android:color/white"
                android:layout_alignTop="@+id/textViewVersionLabel"
                android:layout_toRightOf="@+id/textViewVersionLabel"
                android:layout_toEndOf="@+id/textViewVersionLabel"
                android:layout_marginLeft="5sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/copyright"
                android:id="@+id/textViewCopyRight"
                android:layout_below ="@+id/textViewVersionLabel"
                android:layout_alignParentLeft="true"
                android:textColor="@android:color/white"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/contact_label"
                android:id="@+id/textViewContactLabel"
                android:layout_below="@+id/textViewCopyRight"
                android:layout_alignParentLeft="true"
                android:textColor="@android:color/white"
                android:layout_marginTop="10sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/contact_email"
                android:id="@+id/textViewContactEmail"
                android:textColor="@android:color/white"
                android:layout_alignTop="@+id/textViewContactLabel"
                android:layout_toRightOf="@+id/textViewContactLabel"
                android:layout_toEndOf="@+id/textViewContactLabel"
                android:layout_marginLeft="5sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/developed_by_label"
                android:id="@+id/textViewDevelopedByLabel"
                android:layout_below="@+id/textViewContactLabel"
                android:layout_alignParentLeft="true"
                android:textColor="@android:color/white"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/developer"
                android:id="@+id/textViewDeveloper"
                android:textColor="@android:color/white"
                android:layout_alignTop="@+id/textViewDevelopedByLabel"
                android:layout_toRightOf="@+id/textViewDevelopedByLabel"
                android:layout_toEndOf="@+id/textViewDevelopedByLabel"
                android:layout_marginLeft="5sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/definition"
                android:id="@+id/textViewDefinition"
                android:layout_below="@+id/textViewDevelopedByLabel"
                android:layout_alignParentLeft="true"
                android:textColor="@android:color/white"
                android:layout_marginTop="10sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/definition_simplext"
                android:id="@+id/textViewDefinitionSimplext"
                android:layout_below="@+id/textViewDefinition"
                android:layout_alignParentLeft="true"
                android:textColor="@android:color/white"
                android:layout_marginTop="10sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/definition_text2picto"
                android:id="@+id/textViewDefinitionText2Picto"
                android:layout_below="@+id/textViewDefinitionSimplext"
                android:layout_alignParentLeft="true"
                android:textColor="@android:color/white"
                android:layout_marginTop="10sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/definition_eSpeak"
                android:id="@+id/textViewDefinitioneSpeak"
                android:layout_below="@+id/textViewDefinitionText2Picto"
                android:layout_alignParentLeft="true"
                android:textColor="@android:color/white"
                android:layout_marginTop="10sp"/>

            </RelativeLayout>
    </ScrollView>
</RelativeLayout>
